# AgentBriefing

./: .gitignore  MAIN_PLAN.txt  README.md  V1_APPROVAL_PLAN.txt  pyproject.toml
docs/: IMPLEMENTATION_ROADMAP_V1.md  LOGGING_REFERENCE.md  REFERENCE_PARITY_CONTRACT_V1.md  V1_1_GAP_REGISTER.md  V1_2_BACKLOG.md  V1_3_REFERENCE_PARITY_HOT_PLAN.md
docs/archive/: DOCS_MIGRATION_MAP_2026-03-18.md  README.md
docs/archive/cycle_plans/: V1_1_KNOWN_LIMITS.md  V1_1_OPERATIONAL_ACCURACY_PLAN.md  V1_2_BACKLOG.md  V1_2_HOT_FIX_PLAN.md
docs/archive/specs/: ARCHITECTURE.md  PROGRAM_ARCHITECTURE_V1.md  UI_V1_SPEC.md
docs/archive/tracker_history/: MASTER_PLAN_TRACKER_snapshot_20260318_030147.md  README.md
docs/pilot_validation/: PERSONAL_MONITOR_QUICKSTART.md  PILOT_REPO_REGISTRY.md  PILOT_RESULTS_BATCH1_2026-03-17.md  PILOT_RESULTS_RELEASE_PHASE6_2026-03-17.md  PILOT_RESULTS_V1_1_ACCEPTANCE_2026-03-17.md  PILOT_RESULTS_V1_2_BASELINE_FREEZE_2026-03-17.md  PILOT_RESULTS_V1_2_PHASE2_DEPENDENCY_MAPPER_2026-03-17.md  PILOT_RESULTS_V1_2_PHASE3_QUICK_GUARDRAILS_2026-03-17.md  PILOT_RESULTS_V1_2_PHASE4_VALIDATOR_RECALL_2026-03-17.md  PILOT_RESULTS_V1_2_PHASE5_RELEASE_GATE_2026-03-17.md  PILOT_TEST_PROTOCOL.md  README.md
examples/: answers.sample.json
src/opack/: __init__.py  cli.py
src/opack/adapters/: __init__.py  filesystem.py
src/opack/contracts/: __init__.py  models.py
src/opack/core/: __init__.py  enums.py  errors.py
src/opack/engines/: __init__.py  generator.py  questionnaire.py  scanner.py  (+1 more)
tests/: test_monitor_service.py  test_monitor_ui.py  test_pipeline_smoke.py
(+13 files in other folders)
