[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operating-pack-platform"
version = "0.1.0"
description = "CLI-first Operating-Pack Builder for AI agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AgentBriefing Team" }
]
dependencies = []

[project.scripts]
opack = "opack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
